--- a/Sources/AndroidStudioProjects/Abc/app/src/main/AndroidManifest.xml
+++ b/Sources/AndroidStudioProjects/Abc/app/src/main/AndroidManifest.xml
@@ -8,10 +8,20 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Black" >
         <activity
-            android:name=".MainActivity"
+            android:name=".WorkingWithSVG"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.BlueScreen" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
