--- a/Sources/AndroidStudioProjects/Abc/app/src/main/AndroidManifest.xml
+++ b/Sources/AndroidStudioProjects/Abc/app/src/main/AndroidManifest.xml
@@ -7,8 +7,9 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.Black" >
+
         <activity
-            android:name=".WorkingWithSVG"
+            android:name=".SVGTextureRegionExample"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,7 +17,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--
+        <activity
+            android:name=".WorkingWithSVG"
+            android:label="@string/app_name" >
+            <intent-filter>
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
@@ -26,6 +35,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        -->
     </application>
 
 </manifest>
