--- a/Sources/AndroidStudioProjects/Abc/ressourcemanagement/build.gradle
+++ b/Sources/AndroidStudioProjects/Abc/ressourcemanagement/build.gradle
@@ -22,5 +22,6 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     //compile 'com.android.support:appcompat-v7:21.0.3'
     compile project(':andEngine')
+    compile project(':andEngineSVGTextureRegionExtension')
     compile project(':interfaces')
 }
