starting support for SVG sets by refactoring, going on, using a lot of templates, NOT COMPILING YET

--- a/Sources/AndroidStudioProjects/Abc/interfaces/build.gradle
+++ b/Sources/AndroidStudioProjects/Abc/interfaces/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     //compile 'com.android.support:appcompat-v7:21.0.3'
     compile project(':andEngine')
     compile project(':andEngineSVGTextureRegionExtension')
+    compile 'com.intellij:annotations:12.0'
 }
