--- a/Sources/AndroidStudioProjects/Abc/abcBllXmlRo/build.gradle
+++ b/Sources/AndroidStudioProjects/Abc/abcBllXmlRo/build.gradle
@@ -1,13 +1,12 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 19
+    compileSdkVersion 21
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.bitarcher.abc"
         minSdkVersion 10
-        targetSdkVersion 19
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
     }
@@ -22,14 +21,4 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     //compile 'com.android.support:appcompat-v7:21.0.3'
-    compile project(':andEngine')
-    compile project(':andEnginePhysicsBox2DExtension')
-    compile project(':andEngineSVGTextureRegionExtension')
-    compile project(':scenemanagement')
-    compile project(':DaoCore')
-    compile project(':interfaces')
-    compile project(':abcBllXmlRo')
-
 }
-
-
