--- a/Sources/AndroidStudioProjects/Abc/settings.gradle
+++ b/Sources/AndroidStudioProjects/Abc/settings.gradle
@@ -1,6 +1,1 @@
-include ':app', ':andEngine', ':andEnginePhysicsBox2DExtension', ':andEngineSVGTextureRegionExtension', ':scenemanagement', ':DaoCore', ':interfaces', ':ressourcemanagement', ':annotations', ':abcBllXmlRo'
-//include ':DaoTest', ':DaoGenerator', ':DaoExampleGenerator'
-//project(':DaoTest').projectDir = new File('greenDAO/DaoTest')
-//project(':DaoGenerator').projectDir = new File('greenDAO/DaoGenerator')
-project(':DaoCore').projectDir = new File('greenDAO/DaoCore')
-//project(':DaoExampleGenerator').projectDir = new File('greenDAO/DaoExampleGenerator')
+include ':app', ':andEngine', ':andEnginePhysicsBox2DExtension', ':andEngineSVGTextureRegionExtension', ':scenemanagement', ':interfaces', ':ressourcemanagement', ':annotations', ':abcBllXmlRo'
