Ajout du fichier XML Levels.xml

--- a/Sources/AndroidStudioProjects/Abc/app/build.gradle
+++ b/Sources/AndroidStudioProjects/Abc/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile project(':scenemanagement')
     compile project(':interfaces')
     compile project(':abcBllXmlRo')
+    compile 'com.j256.ormlite:ormlite-core:4.48'
+    compile 'com.j256.ormlite:ormlite-android:4.48'
 }
 
 
