--- a/Sources/AndroidStudioProjects/Abc/settings.gradle
+++ b/Sources/AndroidStudioProjects/Abc/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':andEngine', ':andEnginePhysicsBox2DExtension', ':andEngineSVGTextureRegionExtension', ':scenemanagement', ':interfaces', ':ressourcemanagement', ':annotations', ':abcBllXmlRo'
+include ':app', ':andEngine', ':andEnginePhysicsBox2DExtension', ':andEngineSVGTextureRegionExtension', ':scenemanagement', ':interfaces', ':ressourcemanagement', ':annotations', ':abcBllXmlRoResources'
