Introducing unit testing

--- a/Sources/AndroidStudioProjects/Abc/app/build.gradle
+++ b/Sources/AndroidStudioProjects/Abc/app/build.gradle
@@ -20,6 +20,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    sourceSets {
+
+        androidTest {
+            java.srcDirs = ['androidTest/java']
+        }
+    }
 }
 
 repositories {
@@ -37,6 +44,7 @@ dependencies {
     compile project(':scenemanagement')
     compile project(':interfaces')
     compile project(':abcBllXmlRoResources')
+    compile project(':abcBllXmlRoLevels')
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
 }
