--- a/Sources/AndroidStudioProjects/Abc/app/build.gradle
+++ b/Sources/AndroidStudioProjects/Abc/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile project(':andEngineSVGTextureRegionExtension')
     compile project(':resourceManagement')
     compile project(':sceneManagement')
+    compile project(':widgetToolKit')
     compile project(':interfaces')
     compile project(':abcBllXmlRoResources')
     compile project(':abcBllXmlRoLevels')
