--- a/Sources/AndroidStudioProjects/Abc/app/src/main/AndroidManifest.xml
+++ b/Sources/AndroidStudioProjects/Abc/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:theme="@android:style/Theme.Black" >
 
         <activity
-            android:name=".SVGTextureRegionExample"
+            android:name=".tests.TextButtonActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
