--- a/Sources/AndroidStudioProjects/Abc/app/src/main/AndroidManifest.xml
+++ b/Sources/AndroidStudioProjects/Abc/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.bitarcher.abc" >
 
     <application
@@ -9,6 +10,7 @@
         android:theme="@android:style/Theme.Black" >
 
         <activity
+            tools:replace="name"
             android:name=".tests.TextButtonActivity"
             android:label="@string/app_name" >
             <intent-filter>
