--- a/Sources/AndroidStudioProjects/Abc/resourceManagement/src/main/AndroidManifest.xml
+++ b/Sources/AndroidStudioProjects/Abc/resourceManagement/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bitarcher.ressourcemanagement">
+    package="com.bitarcher.resourcemanagement">
 
-    <application android:allowBackup="true" android:label="@string/app_name" android:name=".App"
+    <application android:allowBackup="true" android:label="@string/app_name" android:name=".ResourceManagementApp"
         android:icon="@drawable/ic_launcher">
 
     </application>
