--- a/Sources/AndroidStudioProjects/Abc/sceneManagement/build.gradle
+++ b/Sources/AndroidStudioProjects/Abc/sceneManagement/build.gradle
@@ -22,6 +22,8 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':andEngine')
     compile project(':interfaces')
+    compile project(':widgetToolKit')
+    compile project(':resourceManagement')
     //compile 'com.android.support:appcompat-v7:21.0.3'
 }
 
