--- a/Sources/AndroidStudioProjects/Abc/app/build.gradle
+++ b/Sources/AndroidStudioProjects/Abc/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile project(':interfaces')
     compile project(':abcBllXmlRoResources')
     compile project(':abcBllXmlRoLevels')
+    compile project(':abcBllOrm')
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
 }
