--- a/Sources/AndroidStudioProjects/Abc/settings.gradle
+++ b/Sources/AndroidStudioProjects/Abc/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':andEngine', ':andEnginePhysicsBox2DExtension', ':andEngineSVGTextureRegionExtension', ':sceneManagement', ':interfaces', ':resourceManagement', ':annotations', ':abcBllXmlRoResources', ':abcBllXmlRoLevels', ':widgetToolKit', ':abcbllorm'
+include ':app', ':andEngine', ':andEnginePhysicsBox2DExtension', ':andEngineSVGTextureRegionExtension', ':sceneManagement', ':interfaces', ':resourceManagement', ':annotations', ':abcBllXmlRoResources', ':abcBllXmlRoLevels', ':widgetToolKit', ':abcBllOrm'
