--- a/Sources/AndroidStudioProjects/Abc/abcBllOrm/build.gradle
+++ b/Sources/AndroidStudioProjects/Abc/abcBllOrm/build.gradle
@@ -26,5 +26,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.0.3'
+    //compile 'com.android.support:appcompat-v7:21.0.3'
+    compile project(':interfaces')
+    compile 'com.j256.ormlite:ormlite-core:4.48'
+    compile 'com.j256.ormlite:ormlite-android:4.48'
 }
