--- a/Sources/AndroidStudioProjects/Abc/app/src/main/AndroidManifest.xml
+++ b/Sources/AndroidStudioProjects/Abc/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
 
         <activity
             tools:replace="name"
-            android:name=".tests.TextButtonActivity"
+            android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
