Continuing scrolling menu, compiles, adding hbox and vbox 4, starting prefixing with aeFun os projects Finished

--- a/Sources/AndroidStudioProjects/Abc/app/build.gradle
+++ b/Sources/AndroidStudioProjects/Abc/app/build.gradle
@@ -46,10 +46,10 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
 
-    compile project(':sceneManagement')
-    compile project(':widgetToolKit')
     compile project(':aeFunInterfaces')
     compile project(':aeFunResourceManagement')
+    compile project(':aeFunWidgetToolKit')
+    compile project(':aeFunSceneManagement')
 
     compile project(':interfacesProtected')
     compile project(':abcBllXmlRoResources')
