--- a/Sources/AndroidStudioProjects/Abc/aeFunSceneManagement/build.gradle
+++ b/Sources/AndroidStudioProjects/Abc/aeFunSceneManagement/build.gradle
@@ -22,7 +22,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':andEngine')
     compile project(':aeFunInterfaces')
-    compile project(':widgetToolKit')
+    compile project(':aeFunWidgetToolKit')
     compile project(':aeFunResourceManagement')
     //compile 'com.android.support:appcompat-v7:21.0.3'
 }
