C scrolling menu, decoupling layout from widget 4 (compiles)

--- a/Sources/AndroidStudioProjects/Abc/app/build.gradle
+++ b/Sources/AndroidStudioProjects/Abc/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
 
     compile project(':aeFunInterfaces')
     compile project(':aeFunResourceManagement')
+    compile project(':aeFunWidgetLayout')
     compile project(':aeFunWidgetToolKit')
     compile project(':aeFunSceneManagement')
 
