dog, adding bitmap texture format texture options arguments in textures infos 2

--- a/Sources/AndroidStudioProjects/Abc/app/build.gradle
+++ b/Sources/AndroidStudioProjects/Abc/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     compile project(':abcBllXmlRoResources')
     compile project(':abcBllXmlRoLevels')
     compile project(':abcBllOrm')
+    compile project(':dog')
 
 }
 
