--- a/Sources/AndroidStudioProjects/Abc/aeFunResourceManagement/src/main/AndroidManifest.xml
+++ b/Sources/AndroidStudioProjects/Abc/aeFunResourceManagement/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bitarcher.resourcemanagement">
 
-    <application android:allowBackup="true" android:label="@string/app_name" android:name="com.bitarcher.aeFun.resourceManagement.ResourceManagementApp"
+    <application android:allowBackup="true" android:label="@string/app_name"
         android:icon="@drawable/ic_launcher">
 
     </application>
