--- a/Sources/AndroidStudioProjects/Abc/settings.gradle
+++ b/Sources/AndroidStudioProjects/Abc/settings.gradle
@@ -1,1 +1,8 @@
-include ':app', ':AndEngine', ':AndEngineSVGTextureRegionExtension', ':interfacesProtected', ':annotations', ':abcBllXmlRoResources', ':abcBllXmlRoLevels', ':abcBllOrm',  ':privateExamples', ':aeFun:aeFunExamples', ':aeFun:aeFunGeometry', ':aeFunDrawablesAnimatedMeshed' , ':aeFun:aeFunSceneManagement',   ':aeFun:aeFunInterfaces', ':aeFun:aeFunResourceManagement', ':aeFun:aeFunWidgetToolKit', ':aeFun:aeFunWidgetLayout', ':aeFun:aeFunResourceManagementSvgEnhanced', ':aeFun:aeFunDrawablesCharacters', ':aeFun:aeFunDrawablesCharactersAnimalsDog'
+include ':app', ':AndEngine', ':AndEngineSVGTextureRegionExtension',
+        ':interfacesProtected', ':annotations', ':abcBllXmlRoResources', ':abcBllXmlRoLevels',
+        ':abcBllOrm', ':privateExamples',
+        ':aeFun:aeFunExamples', ':aeFun:aeFunGeometry', ':aeFun:aeFunSceneManagement', ':aeFun:aeFunInterfaces',
+        ':aeFun:aeFunResourceManagement', ':aeFun:aeFunWidgetToolKit', ':aeFun:aeFunWidgetLayout',
+        ':aeFun:aeFunResourceManagementSvgEnhanced',
+        ':aeFun:aeFunDrawablesCharacters', ':aeFun:aeFunDrawablesCharactersAnimalsDog',
+        ':aeFun:aeFunDrawablesAnimatedMeshed'
