--- a/Sources/AndroidStudioProjects/Abc/settings.gradle
+++ b/Sources/AndroidStudioProjects/Abc/settings.gradle
@@ -5,4 +5,5 @@ include ':app', ':AndEngine', ':AndEngineSVGTextureRegionExtension',
         ':aeFun:aeFunResourceManagement', ':aeFun:aeFunWidgetToolKit', ':aeFun:aeFunWidgetLayout',
         ':aeFun:aeFunResourceManagementSvgEnhanced',
         ':aeFun:aeFunDrawablesCharacters', ':aeFun:aeFunDrawablesCharactersAnimalsDog',
-        ':aeFun:aeFunDrawablesAnimatedMeshed'
+        ':aeFun:aeFunDrawablesAnimatedMeshed',
+        ':aeFun:aeFunDrawablesCliparts'
