--- a/Sources/AndroidStudioProjects/Abc/app/build.gradle
+++ b/Sources/AndroidStudioProjects/Abc/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     compile project(':abcBllXmlRoResources')
     compile project(':abcBllXmlRoLevels')
     compile project(':abcBllOrm')
+    compile project(':speaker')
 }
 
 
